# gemtest-examples

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
examples/acoustic_scene_classifier/: test_acoustic_scene_classifier.py
examples/acoustic_scene_classifier/models/: aec_core.py  aec_inference.py
examples/acoustic_scene_classifier/scratch/: scratch_script_aec.py
examples/facial_keypoints/: keypoint_detection.py  keypoint_visualizer.py  test_keypoints.py
examples/gtsrb/: README.md
examples/gtsrb/assets/: data_split_gtsrb.json
examples/gtsrb/data/: config.py  download_GTSRB_complete.py
examples/gtsrb/metamorphic_tests/: config.py  gemtest_multiple_mutants_runner.py  setup_image_classifier.py  test_blue_circle.py  test_medium.py  test_overlay.py  test_red_circle.py  test_shadow.py  test_sign.py  test_simple.py  test_strange.py  test_triangle.py
examples/gtsrb/model/: classifier.py  config.py  lenet.py  mnist_cnn.py  resnet_custom.py  spatial_transformer_networks.py  wide_resnet28_2.py
examples/gtsrb/pipeline_tests/: change_background_pipeline.py  remove_inner_sign_component_pipeline.py  triangle_sign_pipeline.py  write_speed_pipeline.py
examples/gtsrb/utils/: gtsrb_label_enum.py
examples/house_pricing/: house_pricing.py  test_house_pricing.py
examples/knapsack/: knapsack.py  test_knapsack.py
examples/knapsack/solvers/: __init__.py  brute_force.py  knapsack_dp.py  ratio_greedy.py  sa.py
examples/linalg/: test_solve.py  test_solve_tighter_oracle.py  test_transpose.py  utils.py
examples/linalg/suts_to_mutate/: __init__.py  linalg_optimized_solve.py  linalg_original_solve.py  linalg_solve_use_inv_Asad_ullah_Khan.py  linalg_solve_use_inv_stackPusher.py  linalg_transpose.py
examples/max_flow_solver/: test_maxflow_solvers.py
examples/max_flow_solver/network_flow_graph_generator/: network_flow_graph.py
examples/max_flow_solver/solvers/: dinic_algorithm.py  edmonds_karp.py  ford_fulkerson.py  push_relabel.py  test_solvers.py
examples/mnist/: config.json  efficient_capsnet_test.ipynb
examples/mnist/data/: config.py  data_loaders.py  download_MNIST_complete.py  utils.py
examples/mnist/metamorphic_tests/: setup_image_classifier.py  setup_torch_classifier.py  test_exp_label_preserving.py  test_exp_non_label_preserving.py  test_label_preserving.py  test_non_label_preserving.py
examples/mnist/model/: __init__.py  config.py  efficient_capsnet.py  efficient_capsnet_graph_mnist.py  efficient_capsnet_graph_multimnist.py  efficient_capsnet_graph_smallnorb.py  lenet.py  mnist_cnn.py  model.py  original_capsnet_graph_mnist.py  resnet_custom.py  wide_resnet28_2.py
examples/mnist/utils/: __init__.py  augmentationUtils.py  dataset.py  layers.py  pre_process_mnist.py  pre_process_multimnist.py  pre_process_smallnorb.py  tools.py  visualization.py
examples/radar_retraining/: helper.py  radar_augmentation.py  radar_predicter.py  radar_visualizer.py  set_filepaths.py  test_radar.py  weightsLoader.py
examples/sat_solver/: sat_solver_helpers.py  test_pysat.py  test_sat.py  test_sat_complex.py
examples/shortest_path/: test_path.py
examples/simple/: test_add.py  test_avg.py
examples/sorting/: data_generator.py  test_sort_metamorphic.py  test_sort_stable.py  test_sort_stable_tight.py  test_sort_unstable.py  test_sort_unstable_tight.py
examples/sorting/stable_sorting_algorithms/: insertion_sort.py  merge_sort.py  radix_sort.py
examples/sorting/unstable_sorting_algorithms/: heap_sort.py  quicksort.py  selection_sort.py
examples/speech_recognition/: test_speech2text.py
examples/speech_recognition/audio_visualizer/: visualize.py
examples/speech_recognition/models/: speech_to_text.py
examples/speech_recognition/utils/: general_utils.py
examples/trigonometry/: test_cos.py  test_faulty_sin.py  test_sin.py  test_sin_metamorphic.py
scripts/: lint.py  run_mutation_testing.py  run_tests.py
(+142 files in other folders)
